# sudoku2

./: .gitignore  404.html  LICENCE  README.md  _formatting.py  _solvingmethods.py  evil2.csv  expert.csv  expert3.csv  formatting.py  index.html  objects.inv  pyproject.toml  sitemap.xml  solver.py  solvingmethods.py  stdSolver.py  stepping.py  sudoku.py
api/modules/: index.html
api/sudoku/consolesolver/: index.html
api/sudoku/formatting/: index.html
api/sudoku/solvertools/: index.html
api/sudoku/solvingmethods/: index.html
api/sudoku/stepping/: index.html
api_guide/: index.html
custom_solver/: index.html
docs/: api_structure.md  custom_solver.md  gen_api_docs.py  index.md  mkdocs.yml
docs/content/: api_guide.md  custom_solver.md  index.md  solving_process.md  standard_solver.md  standard_solvers.md
examples/: mid.csv
examples/doc_reference/: custom_solver.py  solved.csv  standard_solver.py
examples/std_examples/: use_consolesolver.py  use_customsolver.py
puzzles/: evil.csv  evil3.csv  evil4.csv  evil5.csv  expert2.csv  expert3.csv  hard.csv
search/: search_index.json
solving_process/: index.html
src/sudoku/: __init__.py  consolesolver.py  formatting.py  solver.py  solvertools.py  solvingmethods.py  stdSolver.py  stepping.py  structure.py
src/susolc/: __init__.py  solvingmethods.py  stdSolver.py  stepping.py
standard_solver/: index.html
standard_solvers/: index.html
use/: example.py  usages.py  use_consolsolver.py  use_customsolver.py
use/api_usage/: mpl_formatter.py
use/std_usage/: use_consolsolver.py  use_customsolver.py
(+1 files in other folders)
