[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku"
version = "0.0.1"
description = "an unserious little library to create sudoku-solvers"
requires-python = ">=3.10"
keywords = ["sudoku"]
classifiers = ["Programming Language :: Python :: 3"]


[tool.setuptools]
package-dir = {"" = "src"}